# trinamic

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs
src/connections/: bxcan.rs  mod.rs
src/modules/: TMCC_160.py  TMCM_1160.py  TMCM_1161.py  TMCM_1240.py  TMCM_1260.py  TMCM_1270.py  TMCM_1370.py  TMCM_1617.py  TMCM_1630.py  TMCM_1633.py  TMCM_1636.py  TMCM_1640.py  TMCM_1670.py  TMCM_3110.py  TMCM_6212.py  TMC_603.py  mod.rs  tmcm_1276.rs
