[package]
name = "trinamic"
version = "0.0.0-beta0"
edition = "2018"
keywords = ["no-std", "embedded-hal-driver", "embedded-hal"]
categories = ["embedded", "hardware-support", "no-std"]
description = "A crate to use HD44780 compliant displays with embedded-hal"
authors = ["John Doneth <doneth7@gmail.com>"]
license = "MIT"
repository = "https://github.com/xoviat/trinamic"
readme = "README.md"

[dependencies]
embedded-hal = { version = "0.2.3", features = ["unproven"] }
embassy-traits = "0.0.0"
bxcan = "0.4.0"
nb = "*"