[package]
name = "trinamic"
version = "0.0.0-beta2"
edition = "2018"
keywords = ["no-std", "embedded-hal-driver", "embedded-hal"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Trinamic Motion Control Language (TMCL) in Rust"
authors = ["xoviat <xoviat@gmail.com>"]
license = "MIT"
repository = "https://github.com/xoviat/trinamic"
readme = "README.md"

[dependencies]
embedded-hal = { version = "0.2.3", features = ["unproven"] }
embassy-traits = "0.0.0"
bxcan = "0.5.0"
nb = "1.0.0"